--- a/index.html
+++ b/index.html
@@ -267,13 +267,16 @@
         </div>
     </main>
     
-    <!-- JavaScript 文件 -->
-    <script src="js/audio.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/starfield.js"></script>
-    <script src="js/fireworks.js"></script>
-    <script src="js/countdown.js"></script>
-    <script src="js/danmaku.js"></script>
-    <script src="js/main.js"></script>
-</body>
+<!-- Three.js 库 -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+        
+        <!-- JavaScript 文件 -->
+        <script src="js/audio.js"></script>
+        <script src="js/config.js"></script>
+        <script src="js/starfield.js"></script>
+        <script src="js/fireworks.js"></script>
+        <script src="js/countdown.js"></script>
+        <script src="js/danmaku.js"></script>
+        <script src="js/main.js"></script>
+    </body>
 </html>
