Update countdown layout and improve ESC key functionality in 2026 New Year Countdown project. Adjusted countdown section positioning for better visual flow and enhanced user experience. Modified ESC key behavior to toggle settings panel, reflecting updated functionality in documentation.

--- a/index.html
+++ b/index.html
@@ -214,34 +214,34 @@
             <h2 class="subtitle">A P P R O A C H I N G</h2>
             <h1 class="year-title">2026</h1>
             <p class="tagline">点亮希望，照亮未来</p>
-        </div>
-        
-        <!-- 倒计时区域 -->
-        <div class="countdown-container">
-            <div class="countdown-box">
-                <div class="countdown-item">
-                    <div class="flip-card">
-                        <span id="days" class="countdown-number">00</span>
+            
+            <!-- 倒计时区域（移到2026下方） -->
+            <div class="countdown-container">
+                <div class="countdown-box">
+                    <div class="countdown-item">
+                        <div class="flip-card">
+                            <span id="days" class="countdown-number">00</span>
+                        </div>
+                        <span class="countdown-label">DAYS</span>
                     </div>
-                    <span class="countdown-label">DAYS</span>
-                </div>
-                <div class="countdown-item">
-                    <div class="flip-card">
-                        <span id="hours" class="countdown-number">00</span>
+                    <div class="countdown-item">
+                        <div class="flip-card">
+                            <span id="hours" class="countdown-number">00</span>
+                        </div>
+                        <span class="countdown-label">HOURS</span>
                     </div>
-                    <span class="countdown-label">HOURS</span>
-                </div>
-                <div class="countdown-item">
-                    <div class="flip-card">
-                        <span id="minutes" class="countdown-number">00</span>
+                    <div class="countdown-item">
+                        <div class="flip-card">
+                            <span id="minutes" class="countdown-number">00</span>
+                        </div>
+                        <span class="countdown-label">MINUTES</span>
                     </div>
-                    <span class="countdown-label">MINUTES</span>
-                </div>
-                <div class="countdown-item">
-                    <div class="flip-card">
-                        <span id="seconds" class="countdown-number">00</span>
+                    <div class="countdown-item">
+                        <div class="flip-card">
+                            <span id="seconds" class="countdown-number">00</span>
+                        </div>
+                        <span class="countdown-label">SECONDS</span>
                     </div>
-                    <span class="countdown-label">SECONDS</span>
                 </div>
             </div>
         </div>
