Update subtitle text and enhance subtitle styles in index.html and style.css for improved visual impact in the 2026 New Year Countdown project. Changed subtitle content to "XLIGHT 前路有光" and applied a gradient background with a glowing effect to enhance readability and aesthetics.

--- a/src/index.html
+++ b/src/index.html
@@ -208,7 +208,7 @@
     <main class="main-content">
         <!-- 标题区域 -->
         <div class="title-section">
-            <h2 class="subtitle">A P P R O A C H I N G</h2>
+            <h2 class="subtitle">XLIGHT 前路有光</h2>
             <h1 class="year-title">2026</h1>
             <p class="tagline">点亮希望，照亮未来</p>
             
