Update deployment configurations and local server settings for 2026 New Year Countdown project. Changed default server port from 8080 to 8021 in Makefile, README, and deployment scripts for consistency. Enhanced configuration loading to prioritize environment variables, improving flexibility for local development.

--- a/src/index.html
+++ b/src/index.html
@@ -243,8 +243,9 @@
             </div>
         </div>
         
-        <!-- 愿望输入区 -->
+        <!-- 愿望输入区 - 悬停展开 -->
         <div class="wish-section">
+            <div class="wish-trigger">✨</div>
             <form id="wish-form" class="wish-form">
                 <input 
                     type="text" 
