Update server port configuration from 8021 to 5861 across deployment scripts and documentation for the 2026 New Year Countdown project. This change ensures consistency in local development and deployment environments, enhancing accessibility for users.

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>新年倒计时 - 迎接2026</title>
     <meta name="description" content="迎接2026年的到来，享受炫酷的烟花特效和精准的倒计时。新年快乐！">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎆</text></svg>">
@@ -19,7 +19,7 @@
     <div id="audio-overlay" class="overlay">
         <div class="overlay-content">
             <span class="overlay-icon">🎆</span>
-            <span>点击此处唤醒音频并发射烟花</span>
+            <span id="overlay-text">点击此处唤醒音频并发射烟花</span>
         </div>
     </div>
     
