Enhance deployment configurations for multi-site support in the 2026 New Year Countdown project. Added entrypoint script for dynamic site configuration generation, updated Dockerfile and docker-compose.yml for multiple site deployments, and expanded README with detailed instructions for configuring and accessing different sites. Improved environment variable management for better flexibility and user experience.

--- a/src/index.html
+++ b/src/index.html
@@ -208,9 +208,9 @@
     <main class="main-content">
         <!-- 标题区域 -->
         <div class="title-section">
-            <h2 class="subtitle">XLIGHT 前路有光</h2>
-            <h1 class="year-title">2026</h1>
-            <p class="tagline">点亮希望，照亮未来</p>
+            <h2 class="subtitle" id="site-subtitle">倒计时</h2>
+            <h1 class="year-title" id="site-year">2026</h1>
+            <p class="tagline" id="site-tagline">点亮希望，照亮未来</p>
             
             <!-- 倒计时区域（移到2026下方） -->
             <div class="countdown-container">
